<resources>
    <string name="app_name">Zvonilka</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_phone">Phone number</string>
    <string name="client_name">Name</string>
    <string name="add_client">Add client</string>
    <string name="enter_some_data">Enter some data</string>
    <string name="permission_to_call_is_required">You need to grant permission</string>
    <string name="show_all_clients">Show all clients</string>
    <string name="call_description">Call description</string>
    <string name="call_result">Call result</string>
    <string name="call_back">Call back</string>
    <string name="dont_call">Don\'t call</string>
    <string name="call_again">Call again</string>
    <string name="call_log">Call log</string>
    <string name="successful_call">Successful call</string>
    <string name="add_property">Add property</string>
    <string name="interests">Interests</string>
    <string name="enter_interest">Enter interest</string>
    <string name="client_city">City</string>
    <string name="client_salon">Salon</string>
    <string name="client_position">Position</string>
    <string name="client_email">E-mail</string>
    <string name="client_todo_info">To do</string>
    <string name="client_other_info">Other</string>
    <string name="city">City</string>
    <string name="sort_clients">Sort</string>
    <string name="sort_message">Choose sorting parameters</string>
    <string name="choose_parameters">Choose parameters</string>
    <string name="interest">Interest</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="close">Закрыть</string>
    <string name="select_all">Выделить все</string>
    <string name="upload">Отправить</string>
    <string name="error">Ошибка</string>
    <string name="incoming_call">Входящий вызов</string>
    <string name="outgoing_call">Исходящий вызов</string>
    <string name="missed_call">Пропущенный вызов</string>
</resources>
